add reset pw page

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -67,8 +67,8 @@
 
   <script>
     const supabase = supabase.createClient(
-      'https://YOUR_PROJECT_ID.supabase.co', // ✅ 替换为你的 Supabase 项目 URL
-      'YOUR_PUBLIC_ANON_KEY' // ✅ 替换为你的 anon key
+      'https://dgizrlyymkxenkeddmdj.supabase.co', 
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRnaXpybHl5bWt4ZW5rZWRkbWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE4NTA2NTEsImV4cCI6MjA1NzQyNjY1MX0.25vvAyHqb3LwEV-fvt8U6xtP1OM-x_4vEjSqTppOIKw' 
     );
 
     const hash = window.location.hash;
