add reset pw page

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -7,113 +7,105 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
-      background: #fff8dc;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      background: #fef6d5;
+      height: 100vh;
+      margin: 0;
       padding: 24px;
-      color: #333;
     }
     h1 {
-      font-size: 26px;
-      margin-bottom: 16px;
-    }
-    form {
-      background: #fff;
-      padding: 20px 24px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 100%;
-    }
-    input {
-      width: 100%;
       margin-bottom: 12px;
+    }
+    input, button {
       padding: 12px;
+      margin: 6px 0;
+      width: 100%;
+      max-width: 300px;
       border: 1px solid #ccc;
       border-radius: 8px;
-      font-size: 16px;
     }
     button {
-      background: goldenrod;
-      border: none;
-      padding: 12px;
-      width: 100%;
-      border-radius: 8px;
-      color: #fff;
+      background-color: goldenrod;
+      color: white;
       font-weight: bold;
-      font-size: 16px;
       cursor: pointer;
     }
-    .message {
-      margin-top: 16px;
-      font-size: 14px;
-      text-align: center;
-    }
+    #error { color: red; }
+    #success { color: green; }
   </style>
 </head>
 <body>
-
   <h1>Reset Your Password</h1>
-  <form id="resetForm">
-    <input type="password" id="newPassword" placeholder="New Password" required />
-    <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
-    <button type="submit">Update Password</button>
-    <div class="message" id="message"></div>
-  </form>
+  <div id="status">Preparing...</div>
+  <div id="form" style="display:none;">
+    <input type="password" id="password" placeholder="New password" />
+    <input type="password" id="confirm" placeholder="Confirm password" />
+    <button onclick="updatePassword()">Update Password</button>
+    <div id="error"></div>
+    <div id="success"></div>
+  </div>
 
   <script>
     const supabase = supabase.createClient(
-      'https://dgizrlyymkxenkeddmdj.supabase.co', 
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRnaXpybHl5bWt4ZW5rZWRkbWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE4NTA2NTEsImV4cCI6MjA1NzQyNjY1MX0.25vvAyHqb3LwEV-fvt8U6xtP1OM-x_4vEjSqTppOIKw' 
+      'https://dgizrlyymkxenkeddmdj.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRnaXpybHl5bWt4ZW5rZWRkbWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE4NTA2NTEsImV4cCI6MjA1NzQyNjY1MX0.25vvAyHqb3LwEV-fvt8U6xtP1OM-x_4vEjSqTppOIKw'
     );
 
-    const hash = window.location.hash;
-    const params = new URLSearchParams(hash.replace('#', ''));
+    const hash = window.location.hash.substring(1);
+    const params = new URLSearchParams(hash);
     const access_token = params.get('access_token');
     const refresh_token = params.get('refresh_token');
     const type = params.get('type');
 
-    if (!access_token || !refresh_token || type !== 'recovery') {
-      document.getElementById('resetForm').innerHTML =
-        "<div class='message'>❌ Invalid or expired reset link.</div>";
-    }
-
-    const messageEl = document.getElementById('message');
-
-    document.getElementById('resetForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const newPassword = document.getElementById('newPassword').value;
-      const confirmPassword = document.getElementById('confirmPassword').value;
-
-      if (newPassword !== confirmPassword) {
-        messageEl.textContent = "❌ Passwords do not match.";
+    async function setSession() {
+      if (!access_token || !refresh_token) {
+        document.getElementById('status').innerText = '❌ Missing token.';
         return;
       }
 
-      messageEl.textContent = "⏳ Updating...";
-
-      const { error: sessionErr } = await supabase.auth.setSession({
+      const { error } = await supabase.auth.setSession({
         access_token,
         refresh_token
       });
 
-      if (sessionErr) {
-        messageEl.textContent = `❌ Session error: ${sessionErr.message}`;
+      if (error) {
+        document.getElementById('status').innerText = '❌ Session failed: ' + error.message;
+      } else {
+        document.getElementById('status').style.display = 'none';
+        document.getElementById('form').style.display = 'block';
+      }
+    }
+
+    async function updatePassword() {
+      const pw = document.getElementById('password').value;
+      const confirm = document.getElementById('confirm').value;
+      const errDiv = document.getElementById('error');
+      const okDiv = document.getElementById('success');
+      errDiv.innerText = '';
+      okDiv.innerText = '';
+
+      if (pw.length < 6) {
+        errDiv.innerText = 'Password too short.';
+        return;
+      }
+      if (pw !== confirm) {
+        errDiv.innerText = 'Passwords do not match.';
         return;
       }
 
-      const { error } = await supabase.auth.updateUser({ password: newPassword });
-
+      const { error } = await supabase.auth.updateUser({ password: pw });
       if (error) {
-        messageEl.textContent = `❌ ${error.message}`;
+        errDiv.innerText = '❌ ' + error.message;
       } else {
-        messageEl.textContent = "✅ Password updated successfully. You may now close this page.";
+        okDiv.innerText = '✅ Password updated!';
       }
-    });
+    }
+
+    setSession();
   </script>
 </body>
 </html>
