add reset pw page

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -4,49 +4,75 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reset Password</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: #fef6d5;
-      height: 100vh;
       margin: 0;
-      padding: 24px;
+      padding: 0;
+      background: linear-gradient(135deg, #fffbe6, #fceabb);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    h1 {
-      margin-bottom: 12px;
-    }
-    input, button {
-      padding: 12px;
-      margin: 6px 0;
+
+    .container {
+      background: #fff;
+      padding: 32px;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
       width: 100%;
-      max-width: 300px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      max-width: 360px;
+      text-align: center;
     }
+
+    h2 {
+      margin-bottom: 24px;
+      color: #444;
+      font-size: 24px;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 16px;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+      box-sizing: border-box;
+    }
+
     button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 10px;
       background-color: goldenrod;
-      color: white;
+      color: #fff;
+      font-size: 16px;
       font-weight: bold;
       cursor: pointer;
     }
-    #error { color: red; }
-    #success { color: green; }
+
+    .message {
+      margin-top: 16px;
+      font-size: 14px;
+      color: #e74c3c;
+    }
+
+    .success {
+      color: #27ae60;
+    }
   </style>
 </head>
 <body>
-  <h1>Reset Your Password</h1>
-  <div id="status">Preparing...</div>
-  <div id="form" style="display:none;">
-    <input type="password" id="password" placeholder="New password" />
-    <input type="password" id="confirm" placeholder="Confirm password" />
+  <div class="container">
+    <h2>Reset Your Password</h2>
+    <input id="new-password" type="password" placeholder="New Password"/>
+    <input id="confirm-password" type="password" placeholder="Confirm Password"/>
     <button onclick="updatePassword()">Update Password</button>
-    <div id="error"></div>
-    <div id="success"></div>
+    <div id="message" class="message"></div>
   </div>
 
   <script>
@@ -55,57 +81,51 @@
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRnaXpybHl5bWt4ZW5rZWRkbWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE4NTA2NTEsImV4cCI6MjA1NzQyNjY1MX0.25vvAyHqb3LwEV-fvt8U6xtP1OM-x_4vEjSqTppOIKw'
     );
 
-    const hash = window.location.hash.substring(1);
-    const params = new URLSearchParams(hash);
-    const access_token = params.get('access_token');
-    const refresh_token = params.get('refresh_token');
-    const type = params.get('type');
+    const hash = new URLSearchParams(window.location.hash.substring(1));
+    const access_token = hash.get('access_token');
+    const refresh_token = hash.get('refresh_token');
 
-    async function setSession() {
+    const showMessage = (text, success = false) => {
+      const msg = document.getElementById('message');
+      msg.textContent = text;
+      msg.className = 'message ' + (success ? 'success' : '');
+    };
+
+    async function updatePassword() {
+      const newPass = document.getElementById('new-password').value;
+      const confirmPass = document.getElementById('confirm-password').value;
+
+      if (!newPass || !confirmPass) {
+        return showMessage('Please fill out both fields.');
+      }
+      if (newPass !== confirmPass) {
+        return showMessage('Passwords do not match.');
+      }
       if (!access_token || !refresh_token) {
-        document.getElementById('status').innerText = '❌ Missing token.';
-        return;
+        return showMessage('Missing credentials from URL.');
       }
 
-      const { error } = await supabase.auth.setSession({
+      // Restore session
+      const { error: sessionErr } = await supabase.auth.setSession({
         access_token,
         refresh_token
       });
 
+      if (sessionErr) {
+        return showMessage('Session failed: ' + sessionErr.message);
+      }
+
+      // Update password
+      const { error } = await supabase.auth.updateUser({
+        password: newPass
+      });
+
       if (error) {
-        document.getElementById('status').innerText = '❌ Session failed: ' + error.message;
-      } else {
-        document.getElementById('status').style.display = 'none';
-        document.getElementById('form').style.display = 'block';
+        return showMessage('Failed to update password: ' + error.message);
       }
+
+      showMessage('Password updated successfully! ✅', true);
     }
-
-    async function updatePassword() {
-      const pw = document.getElementById('password').value;
-      const confirm = document.getElementById('confirm').value;
-      const errDiv = document.getElementById('error');
-      const okDiv = document.getElementById('success');
-      errDiv.innerText = '';
-      okDiv.innerText = '';
-
-      if (pw.length < 6) {
-        errDiv.innerText = 'Password too short.';
-        return;
-      }
-      if (pw !== confirm) {
-        errDiv.innerText = 'Passwords do not match.';
-        return;
-      }
-
-      const { error } = await supabase.auth.updateUser({ password: pw });
-      if (error) {
-        errDiv.innerText = '❌ ' + error.message;
-      } else {
-        okDiv.innerText = '✅ Password updated!';
-      }
-    }
-
-    setSession();
   </script>
 </body>
 </html>
