--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -53,6 +53,12 @@
       font-size: 16px;
       font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
     }
 
     .message {
@@ -69,9 +75,9 @@
 <body>
   <div class="container">
     <h2>Reset Your Password</h2>
-    <input id="new-password" type="password" placeholder="New Password"/>
-    <input id="confirm-password" type="password" placeholder="Confirm Password"/>
-    <button onclick="updatePassword()">Update Password</button>
+    <input id="new-password" type="password" placeholder="New Password" />
+    <input id="confirm-password" type="password" placeholder="Confirm Password" onkeydown="if(event.key==='Enter') updatePassword()" />
+    <button id="submit-button" onclick="updatePassword()">Update Password</button>
     <div id="message" class="message"></div>
   </div>
 
@@ -94,6 +100,7 @@
     async function updatePassword() {
       const newPass = document.getElementById('new-password').value;
       const confirmPass = document.getElementById('confirm-password').value;
+      const btn = document.getElementById('submit-button');
 
       if (!newPass || !confirmPass) {
         return showMessage('Please fill out both fields.');
@@ -105,26 +112,40 @@
         return showMessage('Missing credentials from URL.');
       }
 
-      // Restore session
+      btn.disabled = true;
+      btn.textContent = 'Updating...';
+
+      console.log('🔑 Setting session...');
       const { error: sessionErr } = await supabase.auth.setSession({
         access_token,
         refresh_token
       });
 
       if (sessionErr) {
+        console.error('❌ Session failed', sessionErr);
+        btn.disabled = false;
+        btn.textContent = 'Update Password';
         return showMessage('Session failed: ' + sessionErr.message);
       }
 
-      // Update password
+      console.log('✅ Session set, updating password...');
       const { error } = await supabase.auth.updateUser({
         password: newPass
       });
 
       if (error) {
+        console.error('❌ Password update failed', error);
+        btn.disabled = false;
+        btn.textContent = 'Update Password';
         return showMessage('Failed to update password: ' + error.message);
       }
 
       showMessage('Password updated successfully! ✅', true);
+
+      setTimeout(() => {
+        const deeplink = `kidmate://reset-password-success`;
+        window.location.href = deeplink;
+      }, 1200);
     }
   </script>
 </body>
