--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -53,12 +53,6 @@
       font-size: 16px;
       font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
     }
 
     .message {
@@ -75,18 +69,20 @@
 <body>
   <div class="container">
     <h2>Reset Your Password</h2>
-    <input id="new-password" type="password" placeholder="New Password" />
-    <input id="confirm-password" type="password" placeholder="Confirm Password" onkeydown="if(event.key==='Enter') updatePassword()" />
-    <button id="submit-button" onclick="updatePassword()">Update Password</button>
+    <input id="new-password" type="password" placeholder="New Password"/>
+    <input id="confirm-password" type="password" placeholder="Confirm Password"/>
+    <button id="submit-button">Update Password</button>
     <div id="message" class="message"></div>
   </div>
 
   <script>
-    const supabase = supabase.createClient(
+    // ✅ 初始化 Supabase 客户端
+    const supabase = window.supabase.createClient(
       'https://dgizrlyymkxenkeddmdj.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRnaXpybHl5bWt4ZW5rZWRkbWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE4NTA2NTEsImV4cCI6MjA1NzQyNjY1MX0.25vvAyHqb3LwEV-fvt8U6xtP1OM-x_4vEjSqTppOIKw'
     );
 
+    // ✅ 提取 token（要等 DOM Ready 后）
     const hash = new URLSearchParams(window.location.hash.substring(1));
     const access_token = hash.get('access_token');
     const refresh_token = hash.get('refresh_token');
@@ -123,9 +119,10 @@
 
       if (sessionErr) {
         console.error('❌ Session failed', sessionErr);
+        showMessage('Session failed: ' + sessionErr.message);
         btn.disabled = false;
         btn.textContent = 'Update Password';
-        return showMessage('Session failed: ' + sessionErr.message);
+        return;
       }
 
       console.log('✅ Session set, updating password...');
@@ -135,18 +132,24 @@
 
       if (error) {
         console.error('❌ Password update failed', error);
+        showMessage('Failed to update password: ' + error.message);
         btn.disabled = false;
         btn.textContent = 'Update Password';
-        return showMessage('Failed to update password: ' + error.message);
+        return;
       }
 
+      console.log('🎉 Password updated successfully');
       showMessage('Password updated successfully! ✅', true);
 
       setTimeout(() => {
-        const deeplink = `kidmate://reset-password-success`;
-        window.location.href = deeplink;
+        window.location.href = 'kidmate://reset-password-success';
       }, 1200);
     }
+
+    // ✅ 页面加载后绑定事件
+    window.onload = () => {
+      document.getElementById('submit-button').addEventListener('click', updatePassword);
+    };
   </script>
 </body>
 </html>
