update reset pw page

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -16,6 +16,7 @@
       align-items: center;
       height: 100vh;
     }
+
     .container {
       background: #fff;
       padding: 32px;
@@ -25,11 +26,13 @@
       max-width: 360px;
       text-align: center;
     }
+
     h2 {
       margin-bottom: 24px;
       color: #444;
       font-size: 24px;
     }
+
     input {
       width: 100%;
       padding: 12px;
@@ -39,6 +42,7 @@
       font-size: 16px;
       box-sizing: border-box;
     }
+
     button {
       width: 100%;
       padding: 12px;
@@ -50,11 +54,13 @@
       font-weight: bold;
       cursor: pointer;
     }
+
     .message {
       margin-top: 16px;
       font-size: 14px;
       color: #e74c3c;
     }
+
     .success {
       color: #27ae60;
     }
@@ -75,17 +81,16 @@
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRnaXpybHl5bWt4ZW5rZWRkbWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE4NTA2NTEsImV4cCI6MjA1NzQyNjY1MX0.25vvAyHqb3LwEV-fvt8U6xtP1OM-x_4vEjSqTppOIKw'
     );
 
-    const showMessage = (text, success = false) => {
+    let access_token = null;
+    let refresh_token = null;
+
+    function showMessage(text, success = false) {
       const msg = document.getElementById('message');
       msg.textContent = text;
       msg.className = 'message ' + (success ? 'success' : '');
-    };
+    }
 
     async function updatePassword() {
-      const hashParams = new URLSearchParams(window.location.hash.substring(1));
-      const access_token = hashParams.get('access_token');
-      const refresh_token = hashParams.get('refresh_token');
-
       const newPass = document.getElementById('new-password').value;
       const confirmPass = document.getElementById('confirm-password').value;
       const btn = document.getElementById('submit-button');
@@ -97,7 +102,11 @@
       btn.disabled = true;
       btn.textContent = 'Updating...';
 
-      const { error: sessionErr } = await supabase.auth.setSession({ access_token, refresh_token });
+      // Step 1: Restore session
+      const { error: sessionErr } = await supabase.auth.setSession({
+        access_token,
+        refresh_token
+      });
 
       if (sessionErr) {
         console.error('Session error:', sessionErr);
@@ -107,24 +116,30 @@
         return;
       }
 
+      // Step 2: Update password
       const { error } = await supabase.auth.updateUser({ password: newPass });
 
       if (error) {
-        console.error('Update error:', error);
+        console.error('Update failed:', error);
         showMessage('Failed to update password: ' + error.message);
         btn.disabled = false;
         btn.textContent = 'Update Password';
         return;
       }
 
-      showMessage('Password updated successfully! ✅', true);
+      showMessage('Password updated successfully!', true);
 
+      // Optional: Redirect back to app
       setTimeout(() => {
         window.location.href = 'kidmate://reset-password-success';
       }, 1500);
     }
 
     window.onload = () => {
+      const hash = new URLSearchParams(window.location.hash.substring(1));
+      access_token = hash.get('access_token');
+      refresh_token = hash.get('refresh_token');
+
       document.getElementById('submit-button').addEventListener('click', updatePassword);
     };
   </script>
