update reset pw page

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -102,7 +102,6 @@
       btn.disabled = true;
       btn.textContent = 'Updating...';
 
-      // Step 1: Restore session
       const { error: sessionErr } = await supabase.auth.setSession({
         access_token,
         refresh_token
@@ -116,7 +115,6 @@
         return;
       }
 
-      // Step 2: Update password
       const { error } = await supabase.auth.updateUser({ password: newPass });
 
       if (error) {
@@ -129,16 +127,17 @@
 
       showMessage('Password updated successfully!', true);
 
-      // Optional: Redirect back to app
       setTimeout(() => {
         window.location.href = 'kidmate://reset-password-success';
       }, 1500);
     }
 
+    // Extract tokens from location.hash
     window.onload = () => {
-      const hash = new URLSearchParams(window.location.hash.substring(1));
-      access_token = hash.get('access_token');
-      refresh_token = hash.get('refresh_token');
+      const hash = window.location.hash.substring(1); // remove '#'
+      const params = new URLSearchParams(hash);
+      access_token = params.get('access_token');
+      refresh_token = params.get('refresh_token');
 
       document.getElementById('submit-button').addEventListener('click', updatePassword);
     };
