--- a/public/signup-confirmed.html
+++ b/public/signup-confirmed.html
@@ -5,20 +5,86 @@
     <title>Email Verified</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      body {
-        font-family: sans-serif;
-        text-align: center;
-        margin-top: 100px;
+      * {
+        box-sizing: border-box;
       }
+
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Segoe UI', sans-serif;
+        background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .card {
+        background: white;
+        padding: 40px 30px;
+        border-radius: 16px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+        max-width: 400px;
+        width: 90%;
+        text-align: center;
+        animation: fadeIn 0.6s ease-in-out;
+      }
+
+      h1 {
+        color: #2ecc71;
+        font-size: 24px;
+        margin-bottom: 12px;
+      }
+
+      p {
+        font-size: 16px;
+        color: #555;
+        margin-bottom: 24px;
+      }
+
+      .spinner {
+        margin: 20px auto;
+        width: 48px;
+        height: 48px;
+        border: 4px solid #eee;
+        border-top: 4px solid #2ecc71;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
       a {
-        color: #1e90ff;
+        display: inline-block;
+        margin-top: 10px;
         text-decoration: none;
+        color: #1e90ff;
+        font-weight: 600;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
     </style>
   </head>
   <body>
-    <h1>✅ Your email has been verified!</h1>
-    <p>You may now return to the app or login again.</p>
-    <a href="https://kidmate.vercel.app/login">Go to Login</a>
+    <div class="card">
+      <h1>✅ Your email has been verified!</h1>
+      <p>You may now return to the app or login again.</p>
+      <div class="spinner"></div>
+      <a href="#">Go to Login</a>
+    </div>
   </body>
 </html>
