update signuo veri page

--- a/public/signup-confirmed.html
+++ b/public/signup-confirmed.html
@@ -13,7 +13,7 @@
         margin: 0;
         padding: 0;
         font-family: 'Segoe UI', sans-serif;
-        background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+        background: linear-gradient(135deg, #ddde86, #dfed9e);
         height: 100vh;
         display: flex;
         align-items: center;
