update signuo veri page

--- a/public/signup-confirmed.html
+++ b/public/signup-confirmed.html
@@ -81,7 +81,7 @@
   </head>
   <body>
     <div class="card">
-      <h1>✅ Your email has been verified!</h1>
+      <h1>Your email has been verified!</h1>
       <p>You may now return to the app or login again.</p>
       <div class="spinner"></div>
       <a href="#">Go to Login</a>
